@@ -12,6 +12,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Transactional
 @RequiredArgsConstructor
@@ -30,7 +31,7 @@ public class AnalyzeService {
             return  analyzeRepository.findByUserAccountEntity_IdAndCreatedAtBefore(getUserId,today)
                     .stream()
                     .map(AnalyzeDTO::toAnalyzeDTO)
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         return null;
